# tracking_task

./: Cargo.toml  Dioxus.toml  LICENSE  package-lock.json  package.json  tailwind.config.js  tasks.db
.github/workflows/: build.yml
assets/: Dog_icons.icns  input.css  main.css  tailwind.css
src/: database.rs  main.rs
src-1/: database.rs  main.rs
src-1/components/: add_task.rs  task_list.rs
src-2/: database.rs
src-2/components/: calendar.rs  mod.rs  task_list.rs
src/components/: mod.rs  recurring_list.rs  task_list.rs
