[package]
name = "task_tracker"
version = "0.1.0"
authors = ["kampon_seamakhoo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.45"
dioxus = { version = "0.7.1", features = [] }
rfd = "0.17.2"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = "1.0.228"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
